objects/Liability__c.object
<CustomObject>
    <fields>
        <fullName>Accruals_Liability_Value__c</fullName>
        <label>Accruals Liability Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estate_and_Accrual__c</fullName>
        <label>Estate and Accrual</label>
        <referenceTo>EstateAcc__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Liabilities_Paid__c</fullName>
        <label>Liabilities Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability_at_Date_of_Death__c</fullName>
        <label>Liability at Date of Death</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liability_owed_to_and_reason__c</fullName>
        <label>Liability owed to and reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Liability</label>
    <nameField>
        <label>Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>